--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.8
 distro==1.9.0
 Flask==3.1.0
 Flask-Cors==5.0.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -17,6 +18,7 @@ jiter==0.8.2
 MarkupSafe==3.0.2
 mysql-connector-python==9.2.0
 openai==1.63.2
+packaging==24.2
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dotenv==1.0.1
